--- a/2.1.md
+++ b/2.1.md
@@ -21,10 +21,14 @@
 ex有一个类型为int的变量x的地址为0x100，也就是说，地址表达式&x的值为0x100，那么x的4个字节将被保存在0x100、0x101、0x102与0x103位置
 关于大端法小端法[https://www.cnblogs.com/broglie/p/5645200.html](https://www.cnblogs.com/broglie/p/5645200.html)
 
-最高有效字节在最前面的方式称为大端法
+**最高有效字节在最前面的方式称为大端法
 
-最低有效字节在最前面的方式成为小端法
+最低有效字节在最前面的方式成为小端法**
 
 // 大多数Intel兼容机都只用小端模式。现在比较新的处理器是双端法，而移动电话的arm处理器其硬件可以按大端或小端，但安卓与ios操作系统都只能运行小端模式。
 
+### 4.表示字符串 ###
+
+c语言中字符串被编码为一个以null（其值为0）字符结尾的字符数组。
+每个字符都有某个标准编码来表示。例如ASCⅡ字符码。
 
