--- a/2.1.md
+++ b/2.1.md
@@ -32,3 +32,51 @@ ex有一个类型为int的变量x的地址为0x100，也就是说，地址表达
 c语言中字符串被编码为一个以null（其值为0）字符结尾的字符数组。
 每个字符都有某个标准编码来表示。例如ASCⅡ字符码。
 
+### 5.布尔代数运算 ###
+
+用二进制数进行运算，联系二元集合{0，1}的基础运算 这里给出门与电路的真值表，好看懂并且串联了知识。[https://www.cnblogs.com/luoao/p/13855634.html](https://www.cnblogs.com/luoao/p/13855634.html)
+
+### 6.c语言位级运算 ###
+
+| or 或
+
+& and 与
+
+~ not 取反
+
+^ exclusive-or 异或
+
+把十六进制参数扩展为二进制表示并执行二进制运算，然后再转换回十六进制。
+
+### 7.c语言中逻辑运算 ###
+
+|| 
+
+&&
+
+！
+
+这些逻辑运算认为所有非零的参数都表示true ，而参数0表示false，他们返回1或0，分别表示结果为true或者false。
+
+例如
+
+	表达式	结果
+	!0x41  0x00
+	!0x00  0x01
+	!!0x41 0x01
+	0x69&&0x55	0x01
+	0x65||0x55	0x01
+
+###8.c语言的位移运算###
+
+按二进制形式把所有的数字向左移动对应的位数，高位移出(舍弃)，低位的空位补零。
+简单一点解释就是把数移动对应位数。
+
+例如	一个八位参数x的位移操作
+
+	操作           值
+	参数x		[01100011】 【10010101】
+	x<<4	  [00110000】  【01010000】
+	x
+	
+	
