--- a/2.2.md
+++ b/2.2.md
@@ -47,6 +47,44 @@ https://images2017.cnblogs.com/blog/1120165/201709/1120165-20170917152625485-106
 
 u=4294967295 ,tu=-1
 
-因为32位下的Umax的位模式是0xFFFFFFFF而-1的 位模式符也是0xFFFFFFFF
+因为32位下的Umax的位模式是0xFFFFFFFF而-1的 位模式符也是0xFFFFFFFF在符号转换时保持位模式不改变
 
-在符号转换时保持位模式不改变。
+无符号数表示中的Umax有着和补码表示的-1相同的位模式。
+
+
+	1+Umax(w)=2^w
+
+当补码和无符号数转换时其权重不同，导致在当位模式中x（w-1）的值为1的时候转换值就会相差2^(w-1)的数。从有符号数转换到无符号数时将权重*2与进行本身的数值叠加，就会得到无符号数的值。
+
+例子：[1011]在有符号时时-5，无符号数时+11 其中-5+8+8=11 
+
+
+	在0到2^(w-1)无论补码到无符号数还是无符号数到补码都是值相通，剩下的部分就像积木一样直接移动到上面去，
+	[1001]补码是-7无符号数就是9
+	[1010]补码是-6无符号数就是10
+	[1011]补码是-5无符号数就是11
+	[1100]补码是-4无符号数就是12
+
+##2.2.5c语言的有符号数与无符号数##
+
+大部分的数字都默认是有符号的。
+
+在c语言中运算过程中如果一个是有符号数一个是无符号数，那么这个时候有符号数会被**隐式**转换为无符号数。
+
+`int tx,ty;`
+
+`unsingned ux,uy;`
+
+`tx = ux;`
+
+`ux = ty;`
+这里就已经将数值进行了转换
+
+##2.2.6扩展一个数字的位表示##
+
+
+
+
+
+
+
