--- a/2.2.md
+++ b/2.2.md
@@ -18,6 +18,10 @@
 
 ## 2.2.3补码编码 ##
 
+先对补码进行解释
+
+补码用于处理
+
 将最高有效位成为符号位，他的“权重”。为-2^(w-1),是无符号表示中权重的负数。当符号位设置为1时，表示值为负，0时值为非负。
 
 举例
@@ -29,7 +33,7 @@ https://images2017.cnblogs.com/blog/1120165/201709/1120165-20170917152625485-106
 这样补码的范围就可以来表示下最小值为[100...0]其整数值为-2^(w-1)
 而最大值是[011...1],整数值为2^(w-1)-1
 
-以长度四为例子 最大值就是7最小值-8.
+ex：以长度四为例 最大值就是7最小值-8.
 
 ## 2.2.4有符号数和无符号数之间的转换 ##
 
